--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
+    "standard-version": "^9.3.1",
     "ts-jest": "^27",
     "typescript": "^4",
     "vue": "^3.2"
